[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/object/earth_tiny.png" type="Texture" id=1]
[ext_resource path="res://art/object/comet_explode-Sheet.png" type="Texture" id=2]
[ext_resource path="res://art/object/missile_tiny.png" type="Texture" id=3]
[ext_resource path="res://art/object/spaceship.png" type="Texture" id=4]
[ext_resource path="res://scene/prolog.gd" type="Script" id=5]
[ext_resource path="res://scene/spaceship.gd" type="Script" id=6]

[node name="prolog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prolog_scene" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="earth_tiny" type="Sprite" parent="prolog_scene"]
position = Vector2( 58.2712, 212.868 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="missile" type="Sprite" parent="prolog_scene"]
position = Vector2( 205.418, 370.965 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="spaceship" type="Sprite" parent="prolog_scene"]
position = Vector2( 199.787, 361.519 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
script = ExtResource( 6 )

[node name="comet" type="Sprite" parent="prolog_scene"]
position = Vector2( 876.989, 22.3242 )
rotation = 0.246091
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
hframes = 7

[node name="Alex" type="Position2D" parent="prolog_scene"]
position = Vector2( 239.787, 341.519 )
scale = Vector2( 4, 4 )

[node name="Spaceship" type="Position2D" parent="prolog_scene"]
position = Vector2( 159.787, 381.519 )
scale = Vector2( 4, 4 )

[node name="Tween" type="Tween" parent="prolog_scene"]

[node name="comet_start" type="Position2D" parent="prolog_scene"]
position = Vector2( 810, 22 )

[node name="comet_appear" type="Position2D" parent="prolog_scene"]
position = Vector2( 656.419, 70.5556 )

[node name="comet_target" type="Position2D" parent="prolog_scene"]
position = Vector2( 120.322, 195.918 )
